--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,10 @@
         android:background="@color/category_phrases"
         android:text="@string/category_phrases" />
 
+    <TextView
+        android:id="@+id/demon"
+        style="@style/CategoryStyle"
+        android:background="@color/category_demon"
+        android:text="@string/category_demon" />
+
 </LinearLayout>
